# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/battery_manager/batterymgr.gni")
import("//build/test.gni")
import("//drivers/adapter/uhdf2/uhdf.gni")

module_output_path = "battery_manager_native/batterysrv"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "include",
    "//utils/system/safwk/native/include",
    "//third_party/googletest/googletest/include",
    "//drivers/peripheral/powermgr/battery/interfaces/include",
    "//third_party/jsoncpp/include",
    "//base/startup/syspara_lite/adapter/native/syspara/include",
    "//base/powermgr/battery_manager/charger/ui/include",
    "//drivers/peripheral/input/interfaces/include",
    "//third_party/libpng",
    "//drivers/ability/sbuf/include",
    "//drivers/framework/include",
    "//drivers/framework/include/core",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/include",
    "//base/powermgr/battery_manager/services/native/include",
    "//base/powermgr/battery_manager/interfaces/innerkits/native/test/unittest/include",
    "//base/powermgr/battery_manager/interfaces/innerkits/native/include",
    "${battery_manager_path}/interfaces/innerkits/native/include",
    "${battery_manager_path}/services/zidl/include",
    "//base/powermgr/battery_manager/charger/led",
    "//base/powermgr/battery_manager/charger/backlight",
    "//base/powermgr/battery_manager/charger/vibrate",
    "//base/powermgr/battery_manager/charger/include",
    "//base/powermgr/power_manager/interfaces/innerkits/native/include",
    "//drivers/peripheral/powermgr/battery/interfaces/include/",
    "//drivers/peripheral/powermgr/battery/include/",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/test/unittest/include",
    "${battery_manager_path}/services/zidl/include",
    "//drivers/peripheral/powermgr/battery/interfaces/include/",
    "//drivers/peripheral/powermgr/battery/include/",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/include",
    "//base/powermgr/battery_manager/charger/led",
    "//base/powermgr/power_manager/interfaces/innerkits/native/include",
  ]
}

##############################systemtest##########################################
ohos_systemtest("test_systemtest") {
  module_out_path = module_output_path

  sources = [
    "//base/powermgr/battery_manager/charger/backlight/battery_backlight.cpp",
    "//base/powermgr/battery_manager/charger/led/battery_led.cpp",
    "//base/powermgr/battery_manager/charger/src/charger_thread.cpp",
    "//base/powermgr/battery_manager/charger/vibrate/battery_vibrate.cpp",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/src/battery_config.cpp",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/src/battery_thread.cpp",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/src/power_supply_provider.cpp",
    "src/battery_sttest.cpp",
  ]

  configs = [
    "${utils_path}:utils_config",
    ":module_private_config",
  ]

  deps = [
    "${battery_manager_path}/interfaces/innerkits:batterysrv_client",
    "${hdf_uhdf_path}/hdi:libhdi",
    "${hdf_uhdf_path}/host:libhdf_host",
    "${hdf_uhdf_path}/host:libhdf_host",
    "${hdf_uhdf_path}/ipc:libhdf_ipc_adapter",
    "${hdf_uhdf_path}/utils:libhdf_utils",
    "//base/powermgr/battery_manager/charger/ui:libminui",
    "//base/powermgr/battery_manager/services:batteryservice",
    "//base/powermgr/battery_manager/services:batteryservice",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//drivers/interface/battery/v1_0:libbattery_proxy_1.0",
    "//drivers/interface/battery/v1_0:libbattery_stub_1.0",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_callback:libbattery_callback",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
    "//utils/native/base:utils",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ces_standard:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}

##############################systemtest##########################################
ohos_systemtest("test_reboot") {
  module_out_path = module_output_path

  sources = [
    "//base/powermgr/battery_manager/charger/backlight/battery_backlight.cpp",
    "//base/powermgr/battery_manager/charger/led/battery_led.cpp",
    "//base/powermgr/battery_manager/charger/src/charger_thread.cpp",
    "//base/powermgr/battery_manager/charger/vibrate/battery_vibrate.cpp",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/src/battery_config.cpp",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/src/battery_thread.cpp",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/src/power_supply_provider.cpp",
    "src/reboot_test.cpp",
  ]

  configs = [
    "${utils_path}:utils_config",
    ":module_private_config",
  ]

  deps = [
    "${hdf_uhdf_path}/host:libhdf_host",
    "${hdf_uhdf_path}/ipc:libhdf_ipc_adapter",
    "${hdf_uhdf_path}/utils:libhdf_utils",
    "//base/powermgr/battery_manager/charger/ui:libminui",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//drivers/interface/battery/v1_0:libbattery_proxy_1.0",
    "//drivers/interface/battery/v1_0:libbattery_stub_1.0",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_callback:libbattery_callback",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}

##############################systemtest##########################################
ohos_systemtest("test_charger_overtemperature_shutdown") {
  module_out_path = module_output_path

  sources = [
    "//base/powermgr/battery_manager/charger/backlight/battery_backlight.cpp",
    "//base/powermgr/battery_manager/charger/led/battery_led.cpp",
    "//base/powermgr/battery_manager/charger/src/charger_thread.cpp",
    "//base/powermgr/battery_manager/charger/vibrate/battery_vibrate.cpp",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/src/battery_config.cpp",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/src/battery_thread.cpp",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/src/power_supply_provider.cpp",
    "src/charger_overtemperature_shutdown_test.cpp",
  ]

  configs = [
    "${utils_path}:utils_config",
    ":module_private_config",
  ]

  deps = [
    "${hdf_uhdf_path}/host:libhdf_host",
    "${hdf_uhdf_path}/ipc:libhdf_ipc_adapter",
    "${hdf_uhdf_path}/utils:libhdf_utils",
    "//base/powermgr/battery_manager/charger/ui:libminui",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//drivers/interface/battery/v1_0:libbattery_proxy_1.0",
    "//drivers/interface/battery/v1_0:libbattery_stub_1.0",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_callback:libbattery_callback",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}

##############################systemtest##########################################
ohos_systemtest("test_charger_undertemperature_shutdown") {
  module_out_path = module_output_path

  sources = [
    "//base/powermgr/battery_manager/charger/backlight/battery_backlight.cpp",
    "//base/powermgr/battery_manager/charger/led/battery_led.cpp",
    "//base/powermgr/battery_manager/charger/src/charger_thread.cpp",
    "//base/powermgr/battery_manager/charger/vibrate/battery_vibrate.cpp",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/src/battery_config.cpp",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/src/battery_thread.cpp",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/src/power_supply_provider.cpp",
    "src/charger_undertemperature_shutdown_test.cpp",
  ]

  configs = [
    "${utils_path}:utils_config",
    ":module_private_config",
  ]

  deps = [
    "${hdf_uhdf_path}/host:libhdf_host",
    "${hdf_uhdf_path}/ipc:libhdf_ipc_adapter",
    "${hdf_uhdf_path}/utils:libhdf_utils",
    "//base/powermgr/battery_manager/charger/ui:libminui",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//drivers/interface/battery/v1_0:libbattery_proxy_1.0",
    "//drivers/interface/battery/v1_0:libbattery_stub_1.0",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_callback:libbattery_callback",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}

##############################systemtest##########################################
ohos_systemtest("test_battery_overtemperature_shutdown") {
  module_out_path = module_output_path

  sources = [
    "//base/powermgr/battery_manager/charger/backlight/battery_backlight.cpp",
    "//base/powermgr/battery_manager/charger/led/battery_led.cpp",
    "//base/powermgr/battery_manager/charger/src/charger_thread.cpp",
    "//base/powermgr/battery_manager/charger/vibrate/battery_vibrate.cpp",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/src/battery_config.cpp",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/src/battery_thread.cpp",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/src/power_supply_provider.cpp",
    "src/battery_overtemperature_shutdown_test.cpp",
  ]

  configs = [
    "${utils_path}:utils_config",
    ":module_private_config",
  ]

  deps = [
    "${battery_manager_path}/interfaces/innerkits:batterysrv_client",
    "${hdf_uhdf_path}/host:libhdf_host",
    "${hdf_uhdf_path}/ipc:libhdf_ipc_adapter",
    "${hdf_uhdf_path}/utils:libhdf_utils",
    "//base/powermgr/battery_manager/charger/ui:libminui",
    "//base/powermgr/battery_manager/services:batteryservice",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//drivers/interface/battery/v1_0:libbattery_proxy_1.0",
    "//drivers/interface/battery/v1_0:libbattery_stub_1.0",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_callback:libbattery_callback",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ces_standard:cesfwk_core",
    "ces_standard:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}

##############################systemtest##########################################
ohos_systemtest("test_battery_undertemperature_shutdown") {
  module_out_path = module_output_path

  sources = [
    "//base/powermgr/battery_manager/charger/backlight/battery_backlight.cpp",
    "//base/powermgr/battery_manager/charger/led/battery_led.cpp",
    "//base/powermgr/battery_manager/charger/src/charger_thread.cpp",
    "//base/powermgr/battery_manager/charger/vibrate/battery_vibrate.cpp",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/src/battery_config.cpp",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/src/battery_thread.cpp",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/src/power_supply_provider.cpp",
    "src/battery_undertemperature_shutdown_test.cpp",
  ]

  configs = [
    "${utils_path}:utils_config",
    ":module_private_config",
  ]

  deps = [
    "${battery_manager_path}/interfaces/innerkits:batterysrv_client",
    "${hdf_uhdf_path}/host:libhdf_host",
    "${hdf_uhdf_path}/ipc:libhdf_ipc_adapter",
    "${hdf_uhdf_path}/utils:libhdf_utils",
    "//base/powermgr/battery_manager/charger/ui:libminui",
    "//base/powermgr/battery_manager/services:batteryservice",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//drivers/interface/battery/v1_0:libbattery_proxy_1.0",
    "//drivers/interface/battery/v1_0:libbattery_stub_1.0",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_callback:libbattery_callback",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ces_standard:cesfwk_core",
    "ces_standard:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}

##############################systemtest##########################################
ohos_systemtest("test_charger_offline_shutdown") {
  module_out_path = module_output_path

  sources = [
    "//base/powermgr/battery_manager/charger/backlight/battery_backlight.cpp",
    "//base/powermgr/battery_manager/charger/led/battery_led.cpp",
    "//base/powermgr/battery_manager/charger/src/charger_thread.cpp",
    "//base/powermgr/battery_manager/charger/vibrate/battery_vibrate.cpp",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/src/battery_config.cpp",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/src/battery_thread.cpp",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_service/src/power_supply_provider.cpp",
    "src/charger_offline_shutdown_test.cpp",
  ]

  configs = [
    "${utils_path}:utils_config",
    ":module_private_config",
  ]

  deps = [
    "${hdf_uhdf_path}/host:libhdf_host",
    "${hdf_uhdf_path}/ipc:libhdf_ipc_adapter",
    "${hdf_uhdf_path}/utils:libhdf_utils",
    "//base/powermgr/battery_manager/charger/ui:libminui",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//drivers/interface/battery/v1_0:libbattery_proxy_1.0",
    "//drivers/interface/battery/v1_0:libbattery_stub_1.0",
    "//drivers/peripheral/powermgr/battery/interfaces/hdi_callback:libbattery_callback",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}

group("systemtest") {
  testonly = true
  deps = []

  deps += [
    ":test_battery_overtemperature_shutdown",
    ":test_battery_undertemperature_shutdown",
    ":test_charger_offline_shutdown",
    ":test_charger_overtemperature_shutdown",
    ":test_charger_undertemperature_shutdown",
    ":test_reboot",
    ":test_systemtest",
  ]
}
